--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -13,7 +13,6 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
@@ -76,6 +75,8 @@
   flex-wrap: wrap;
   max-width: 800px;
   margin-top: 3rem;
+  overflow: auto;
+  max-height: 50vh;
 }
 
 .card {
@@ -100,6 +101,10 @@
 .card h2 {
   margin: 0 0 1rem 0;
   font-size: 1.5rem;
+}
+
+.card h6 {
+  margin: -1rem 0 1rem 0;
 }
 
 .card p {
